syntax = "proto3";
package Protocol;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Google.Protobuf.Protocol";

enum MsgId
{
	S_PING = 0;
	C_PONG = 1;
	S_CONNECTED = 2;
}

message S_Ping
{
	google.protobuf.Timestamp serverTime = 1;
}

message C_Pong
{

}

message S_Connected
{
	google.protobuf.Timestamp serverTime = 1;
}